--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <pre id="result">Fetching...</pre>
 
   <script>
-    fetch("https://509d-182-69-81-141.ngrok-free.app/get_orders/", {
+    fetch("https:localhost/get_orders/", {
       method: "GET",
       headers: {
         "Content-Type": "application/json"
